# training-turtlebot-simulator-student

./: .gitignore  README.md
turtlebot_description_gazebo/: CMakeLists.txt  package.xml
turtlebot_description_gazebo/robots/: create_circles_hokuyo.urdf.xacro  kobuki_hexagons_astra.urdf.xacro  kobuki_hexagons_asus_xtion_pro.urdf.xacro  kobuki_hexagons_asus_xtion_pro_offset.urdf.xacro  kobuki_hexagons_hokuyo.urdf.xacro  kobuki_hexagons_kinect.urdf.xacro  kobuki_hexagons_r200.urdf.xacro  roomba_circles_asus_xtion_pro.urdf.xacro  roomba_circles_kinect.urdf.xacro
turtlebot_description_gazebo/urdf/: turtlebot_common_library.urdf.xacro  turtlebot_gazebo.urdf.xacro
turtlebot_description_gazebo/urdf/sensors/: astra.urdf.xacro  asus_xtion_pro.urdf.xacro  asus_xtion_pro_offset.urdf.xacro  hokuyo.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro
turtlebot_description_gazebo/urdf/stacks/: circles.urdf.xacro  hexagons.urdf.xacro
turtlebot_gazebo/: Tp.md  Tp2.md  readme.md
turtlebot_gazebo/launch/: amcl_demo.launch  amcl_demo_local_planner.launch  gmapping_demo.launch  goback.bash  turtlebot_navigation_local_planner_world.launch  turtlebot_navigation_maze_world.launch  turtlebot_navigation_robocup_world.launch  turtlebot_navigation_rooms_short_world.launch  turtlebot_navigation_rooms_world.launch  turtlebot_world.launch
turtlebot_gazebo/maps/: robocup_maze_origin.yaml  robocup_maze_v1.pgm  robocup_maze_v1.yaml  robocup_maze_v2.pgm  robocup_maze_v2.yaml  robocup_maze_v3.pgm  robocup_maze_v3.yaml  robocup_maze_v4.pgm  robocup_maze_v4.yaml  robocup_rooms_v1.pgm  roomv1.yaml  (+6 more)
(+66 files in other folders)
